--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ autopep8==1.5.4
 Babel==2.8.0
 certifi==2020.6.20
 chardet==3.0.4
+-e git://github.com/winkelband/ddlparse.git#egg=ddlparse
 docutils==0.16
 idna==2.10
 imagesize==1.2.0
